--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "sass": "^1.57.1"
@@ -22,6 +23,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
