--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-responsive-carousel": "^3.2.23",
+    "react-multi-carousel": "^2.8.2",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "sass": "^1.57.1"
